[gd_scene load_steps=5 format=3 uid="uid://cubvekr0ppolo"]

[ext_resource type="Script" uid="uid://tvgleobmbqrj" path="res://scripts/slash_sound.gd" id="1_2e3vp"]
[ext_resource type="AudioStream" uid="uid://beaa3fq7g1p5b" path="res://scenes/audios/sfx/slash-1.mp3" id="2_6dbq4"]
[ext_resource type="AudioStream" uid="uid://b66nja3ihcwd6" path="res://scenes/audios/sfx/slash-2.mp3" id="3_ss62f"]
[ext_resource type="AudioStream" uid="uid://bdc1ux6tyqorh" path="res://scenes/audios/sfx/slash-3.mp3" id="4_xrtfr"]

[node name="SlashSound" type="Node2D"]
script = ExtResource("1_2e3vp")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="Slash1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_6dbq4")
volume_db = -7.142

[node name="Slash2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_ss62f")

[node name="Slash3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_xrtfr")
